# nao

./: .gitignore  NOTICE  README.md  dependencies.repos
.github/workflows/: build_and_test_foxy.yaml  build_and_test_galactic.yaml  build_and_test_humble.yaml  build_and_test_iron.yaml  build_and_test_jammy.yaml  build_and_test_rolling.yaml  main.yml
nao_description/: CMakeLists.txt  README.md  install.sh  package.xml
nao_description/launch/: everything_launch.py
nao_description/rviz/: nao.rviz
nao_description/src/: zero_joint_state_publisher.cpp
nao_description/urdf/: NAOH25V60.urdf  nao.urdf
nao_interfaces_bridge/: CMakeLists.txt  package.xml
nao_interfaces_bridge/include/nao_interfaces_bridge/: nao_interfaces_bridge.hpp
nao_interfaces_bridge/src/: nao_interfaces_bridge.cpp
nao_state_publisher/: CMakeLists.txt  package.xml
nao_state_publisher/launch/: nao_state_publisher_launch.py
nao_state_publisher/src/: nao_state_publisher.cpp
